--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "gsap": "^3.13.0",
+    "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-router-dom": "^7.7.0",
+    "react-use": "^17.6.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
